--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,6 @@
     <title>Название страницы</title>
 </head>
 <body>
-    <div class="hole-game">
-        <div class="hole hole_has-mole" id="hole1"></div>
-        <div class="hole" id="hole2"></div>
-        <div class="hole" id="hole3"></div>
-        <div class="hole" id="hole4"></div>
-    </div>
-
+    <div id="gameField"></div>
 </body>
 </html>
